fix overflow on mobile

--- a/static/css/exomind.css
+++ b/static/css/exomind.css
@@ -113,6 +113,13 @@
   padding: 10px;
   padding-left: 0;
   flex: 0 1 auto;
+  min-width: 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
 }
 .EXM-review-item__right h6 {
   margin-top: 0px;
